--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <title>Document</title>
 </head>
 <body>
-    
+<h1>KAUA GABRIEL 1A</h1>   
+<p1>Me chamo Kaua, tenho 15 ano e sou de Curitiba</p1>
+    <p2>eu torço pro <strong>Athletco-PR</strong></p2>
+    <h2>Athletco-PR</h2>
+    <img src="i.png">
+    <p3>Esse ano o Athletco completa 100 anos, durante esses 100 anos ele conquistou alguns <strong> titulos importantes...</strong></p3>
+<h3>TITULOS</h3>
+<ol>
+<l>28 Estaduais</l>
+<l>1 Campeonato Brasileiro</l>
+<l>2 Sul-Americanas</l>
+<l>1 Copa do Brasil</l>
+<l>1 libertadores</l>
+</ol>
 </body>
 </html>
